# cpp_allocators

./: .travis.yml  README.md
cmake/: CMakeLists.txt  cmake_config.cmake
cmake/executables/: executables.cmake
cmake/libraries/: libraries.cmake
cmake/tests/: tests.cmake
include/: allocator.h  container.h  factorial.h
include/tests/: main_test.h
src/: allocator.cpp  main.cpp
src/tests/: main_test.cpp
